@@ -10,7 +10,7 @@ $html .= '<h3>Getting a color:</h3>
 <p>
 Assuming that the plugin has already been instanciated, getting it\'s current color is a simple API call:
 </p>';
-$html .= '<pre class="instant"><code class="javascript">var color = $("#myColorPicker").chromoselector("getColor");</code></pre>';
+$html .= '<pre class="instant"><code class="javascript">var color = $("#myColorInput").chromoselector("getColor");</code></pre>';
 $html .= '<h3>Setting a color:</h3>
 <p>
 See the <i>setColor()</i> method in the API below for valid formats. The
@@ -19,7 +19,7 @@ change the color, the actual color change may happen a little later.
 </p>
 ';
 $html .= '<pre class="instant"><code class="javascript">
-$("#myColorPicker").choromoselector("setColor", aNewColor);
+$("#myColorInput").choromoselector("setColor", aNewColor);
 </code></pre>';
 $html .= '<h3>Color API:</h3>
 <p>
