@@ -3,6 +3,7 @@ v 2.1.0 - Not yet released
   * Fixed crash when using Prototype.js with jQuery.noConflict
   * Improve picker positioning in small window (moved left or up, if necessary)
   * Added "eventPrefix" property
+  * Added "toggle" method
   * Documentation fixes
   * Updated to jQuery 1.10.2
 
